# backsum

./: .gitmodules  LICENSE  data.pkl  extract-metadata.ipynb  metadata.ipynb  prep_for_annotation.ipynb  preprocessing.ipynb  pyproject.toml  scraps.py
annotation/: A00-2018-akanksha.json  A00-2018-sweta.json  A00-2018-vardha.json  A00-2030-aakansha.json  A00-2030-sweta.json  A00-2030-vardha.json  A97-1014-swastika.json  A97-1014-sweta.json  A97-1014-vardha.json  C00-2123.json  C02-1025.json  C08-1098.json  C10-1045.json  C90-2039.json  C94-2154.json  D09-1092-swastika.json  D09-1092-sweta.json  D09-1092-vardha.json  D10-1044-aakansha.json  D10-1044-swastika.json  D10-1044-sweta.json  D10-1083.json  E03-1005-aakansha.json  E03-1005-swastika.json  E03-1005-sweta.json  E03-1020.json  E09-2008.json  H05-1115.json  H89-2014.json  I05-5011.json  J01-2004-aakansha.json  J01-2004-swastika.json  J01-2004-sweta.json  J03-3003.json  J96-3004.json  N01-1011.json  N04-1038.json  N06-2049.json  P04-1036-aakansha.json  P04-1036-swastika.json  (+49 more)
annotation-bak/: A00-2018-akanksha.json  A00-2030-aakansha.json  C08-1098.json  C10-1045.json  C90-2039.json  C94-2154.json  D09-1092-vardha.json  D10-1083.json  E03-1005-swastika.json  E09-2008.json  J01-2004-aakansha.json  N04-1038.json  P04-1036-aakansha.json  P05-1004.json  P05-1013-swastika.json  P06-2124.json  P08-1028-aakansha.json  P08-1043-swastika.json  P98-2143.json  W11-2123-aakansha.json  W99-0623-sweta.json  X96-1048.json
data/: README.md  annotations.pkl  binary-dataset.pkl  data.csv  data.pkl  docs-dataset.jsonl  docs-dataset.pkl  (+7 more)
(+1332 files in other folders)
