[tool.poetry]
name = "back-summarization"
version = "0.1.0"
description = "Training a model to trace back summary segments"
authors = ["lguenth <mail@lukeguenther.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
lxml = "^4.9.3"
nltk = "^3.8.1"
transformers = {extras = ["torch"], version = "^4.33.2"}
datasets = "^2.14.5"
torch = ">=2.0.0, !=2.0.1"
numpy = "^1.25.2"
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"
sentence-transformers = "^2.2.2"
evaluate = "^0.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
huggingface-hub = "^0.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
